--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
 
 					<!-- footer copyright -->
 					<div class="footer-copyright">
-						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="https://maricisolutions.com" target="_blank">MariciSolutions</a></p>
 					</div>
 					<!-- /footer copyright -->
 
