changes added for my feature

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
-							<h1 class="white-text">We provide services</h1>
+							<h1 class="white-text">We provide services with responsibility.</h1>
 							<p class="white-text">Troupe Of maricisolutions truly committed to deliver the best to you ALWAYS!
 							</p>
 							<button class="main-btn" style="background-color: #efab4a;">Mission</button>
